src/test/ui/enum-discriminant/issue-70453-generics-in-discr-ice.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-70453-generics-in-discr-ice.rs:10:32
   |
LL |     Some = std::mem::size_of::<T>(),
   |                                ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error[E0392]: parameter `T` is never used
  --> $DIR/issue-70453-generics-in-discr-ice.rs:7:20
   |
LL | enum MyWeirdOption<T> {
   |                    ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
